# carelink

./: .coverage  .dockerignore  .env.example  .flake8  .gitignore  .gitlab-ci.yml  CHANGELOG.md  DEMO.md  DEMO_CHECKLIST.md  Dockerfile  Epics.md  Home.py  README.md  RISKS.md  TESTING.md  coverage.xml  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
Pages/Admin/: Admin_Appointments.py  Admin_Dashboard.py  Admin_Profile.py
Pages/Doctor/: Doctor_Appointments.py  Doctor_Dashboard.py  Doctor_Lab_Results.py  Doctor_Prescriptions.py  Doctor_Profile.py
app/: __init__.py  config.py  main.py
app/models/: __init__.py  (+8 more)
components/: auth.py  cards.py  login_Portal.py  sidebar.py
config/: database.py  settings.py
database/: connection.py  mock_data.py  models.py
docs/: api_reference.md  architecture.md  database_schema.md
migrations/: alembic.ini  env.py  script.py.mako
pages/: Admin_Admin_Dashboard.py  Admin_Admin_Profile.py  Admin_Dashboard.py  Appointments.py  Doctor_Dashboard.py  Doctor_Doctor_Appointments.py  Doctor_Doctor_Lab_Results.py  Doctor_Doctor_Prescriptions.py  Doctor_Doctor_Profile.py  Lab_Results.py  Patient_Dashboard.py  Patient_Patient_Appointments.py  Patient_Patient_Dashboard.py  Patient_Patient_Lab_Results.py  Patient_Patient_Prescriptions.py  Prescriptions.py  Profile.py
scripts/: seed_data.py
services/: auth_service.py  session_manager.py
styles/: dashboard.css  footer.css  login.css  main.css  sidebar.css
tests/: __init__.py  conftest.py  test_mock_data.py  test_session_manager.py
utils/: helpers.py
(+89 files in other folders)
